--- a/index.html
+++ b/index.html
@@ -21,8 +21,70 @@
 
     </div>
     <div class="hero-text">
+        <div class="hero-content">
+            <div class="hero-main"> 
+                This website is awesome
+            </div>
+            <div class="second"> 
+                This website has some subtext that goes here under the main title. It's a smaller font and the color
+                is lower contrast.
+            </div>
+            <button>Sign up</button>
+        </div>
+    
+        <div class="placeholder"> 
+            this is a placeholder for an image
+        </div>
     </div>
-    <div class="content">
+    <div class="info">
+        <div class="info-header">
+            Some random information.
+        </div>
+        <div class="image-blocks">
+            <div class="image-block">
+                <img src="img/white-square.png">
+                <p> this is some subtext under an illustration or image </p>
+            </div>
+            <div class="image-block">
+                <img src="img/white-square.png">
+                <p> this is some subtext under an illustration or image </p>
+            </div>
+            <div class="image-block">
+                <img src="img/white-square.png">
+                <p> this is some subtext under an illustration or image </p>
+            </div>
+            <div class="image-block">
+                <img src="img/white-square.png">
+                <p> this is some subtext under an illustration or image </p>
+            </div>
+        </div>
     </div>
+    <div class="quote-section">
+        <div class="quote-box">
+            <p class="quote">
+                This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually
+                read it. Who knows? All I know is that it looks nice.
+            </p> 
+            <div class="attribution">
+                -Thor, God of Thunder
+            </div>
+        </div>
+    </div>
+    <div class="action">
+        <div class="action-content">
+            <div>
+                <p class="action-header"> Call to action! It's time! </p>
+                <p class="action-text"> Sign up for our product by clicking that button right over there! </p>
+            </div>
+            <div>
+                <button class="action-button">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+       Copyright © The Odin Project 2021
+    </div>
+
 </body>
 </html>
